# flask-user-auth-example

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
flask_user_auth/: __init__.py  commands.py  config.py  database.py  forms.py  login.py  views.py
flask_user_auth/static/css/: styles.css
flask_user_auth/templates/: base.html  errors.html  index.html  login.html  register.html  secrets.html
tests/: conftest.py  test_commands.py  test_models.py  test_user.py  test_views.py
