[tool.poetry]
name = "flask-user-auth-example"
version = "0.1.0"
description = "Example of authentication with Flask."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_user_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
