[tool.poetry]
name = "flask-user-auth-example"
version = "0.1.0"
description = "Example of authentication with Flask."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_user_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
taskipy = "^1.10.4"
faker = "^18.9.0"


[tool.isort]
profile = "black"
line_length = 79


[tool.taskipy.tasks]
lint = "isort --check --diff . && blue --check --diff ."
format = "isort . && blue ."
pre_test = "task lint"
test = "coverage run --source=flask_user_auth -m pytest -s -x -vv"
post_test = "coverage html"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'flask.Markup' is deprecated and will be removed in Flask 2.4:DeprecationWarning",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
